style: add styling - add spacing between links - add color to links - unset button styles

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,12 @@ h1{
     grid-column: 2/4;
     grid-row: 1;
 }
+
+a {
+    margin-left: 10px;
+    color: #080808;
+  }
+
+  button {
+    all: unset;
+  }
